@@ -1,3 +1,9 @@
+2011-10-09  Jakub Jelinek  <jakub@redhat.com>
+	    Diego Novillo  <dnovillo@google.com>
+
+	* pt.c (reregister_specialization): Use htab_find instead of
+	htab_find_slot with INSERT.
+
 2011-09-26  Jason Merrill  <jason@redhat.com>
 
 	PR c++/46105
